--- a/config.toml
+++ b/config.toml
@@ -1,18 +1,18 @@
 baseURL = "https://blog.superwm.top/"
 languageCode = "en-us"
-title = "GabMus's Dev Log"
+title = "wm's blog"
 
 theme = "hugo-ficurinia"
 
-author = "Gabriele Musco"
-copyright = "Gabriele Musco - [Creative Commons Attribution 4.0 International License](https://creativecommons.org/licenses/by/4.0/)."
+author = "wm"
+copyright = ""
 
 paginate = 5
 summaryLength = 30
 
 [params]
-    description = "Gabriele Musco's blog about programming and other cool stuff"
-    author = "Gabriele Musco"
+    description = "Curiosity of everything"
+    author = "wm"
     logo = "/logo.svg"
     favicon = "/favicon.png"
     faviconIco = "/favicon.ico"
@@ -20,9 +20,9 @@ summaryLength = 30
     svgicon = "/logo.svg"
     icon512 = "/android-chrome-512x512.png"
     # commento = "https://cloud.techpills.technology:54321/js/commento.js"
-    cactusCommentsSiteName = "gabmus.org"
-    cactusCommentsServerName = "cactus.chat"
-    cactusCommentsHomeserver = "https://matrix.cactus.chat:8448"
+    cactusCommentsSiteName = "blog.superwm.top"
+    #cactusCommentsServerName = "cactus.chat"
+    #cactusCommentsHomeserver = "https://matrix.cactus.chat:8448"
     
     imageInArticlePreview = true
 
@@ -52,22 +52,7 @@ summaryLength = 30
         url = "/archguide"
         weight = 99
     [[menu.icons]]
-        identifier = "gitlab"
-        name = "GitLab"
-        url = "https://gitlab.com/gabmus"
+        identifier = "github"
+        name = "Github"
+        url = "https://github.com/wwminger"
         weight = 10
-    [[menu.icons]]
-        identifier = "gnome"
-        name = "GNOME GitLab"
-        url = "https://gitlab.gnome.org/gabmus"
-        weight = 20
-    [[menu.icons]]
-        identifier = "youtube"
-        name = "YouTube"
-        url = "https://youtube.com/TechPillsNet"
-        weight = 30
-    [[menu.icons]]
-        identifier = "mastodon"
-        name = "Mastodon"
-        url = "https://fosstodon.org/@gabmus"
-        weight = 40
